--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic)
+
+html, body
+  height: 100%
+  width: 100%
+  margin: 0
+  padding: 0
+  left: 0
+  top: 0
+  font-size: 100%
+  font-family: 'Lato', Helvetica, sans-serif
+  color: #333446
+  line-height: 1.5
