--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,14 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic)
 
+\:root
+  font-size: 16px
+  font-family: 'Lato', Helvetica, sans-serif
+  line-height: 1.5
+
 html, body
   height: 100%
   width: 100%
+  color: black
+  background-color: white
   margin: 0
   padding: 0
   left: 0
   top: 0
-  font-size: 100%
-  font-family: 'Lato', Helvetica, sans-serif
-  color: #333446
-  line-height: 1.5
+
+main
+  margin-left: 5rem
