Navigation bar with font-awesome icons

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,12 @@
   font-family: 'Lato', Helvetica, sans-serif
   line-height: 1.5
 
+  // Variables
+  --text-primary: #b6b6b6
+  --text-secondary: #ececec
+  --bg-primary: #23232e
+  --bg-secondary: #141418
+
 html, body
   height: 100%
   width: 100%
@@ -18,3 +24,4 @@ html, body
 
 main
   margin-left: 5rem
+  padding: 2.5rem
