First basic version for navbar, using material icons instead

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic)
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons)
 
 \:root
   font-size: 16px
@@ -8,9 +9,9 @@
 
   // Variables
   --text-primary: #b6b6b6
-  --text-secondary: #ececec
+  --text-secondary: #00ffe7
   --bg-primary: #23232e
-  --bg-secondary: #141418
+  --bg-secondary: #383884
 
 html, body
   height: 100%
@@ -22,6 +23,31 @@ html, body
   left: 0
   top: 0
 
+// a
+//   text-decoration: none
+
 main
   margin-left: 5rem
   padding: 2.5rem
+
+// Material Icons
+.material-icons
+  font-family: 'Material Icons'
+  font-weight: normal
+  font-style: normal
+  font-size: 3rem
+  display: inline-block
+  line-height: 1
+  text-transform: none
+  letter-spacing: normal
+  word-wrap: normal
+  white-space: nowrap
+  direction: ltr
+  // All WebKit browsers
+  -webkit-font-smoothing: antialiased
+  // Safari and Chrome
+  text-rendering: optimizeLegibility
+  // Firefox
+  -moz-osx-font-smoothing: grayscale
+  // IE
+  font-feature-settings: 'liga'
