--- a/src/app/layout/navbar/navbar.component.sass
+++ b/src/app/layout/navbar/navbar.component.sass
@@ -2,7 +2,12 @@
   width: 5rem
   height: 100vh
   position: fixed
-  background-color: var(--bg-primary)
+  background-color: var(--bg-secondary)
+  transition: width 200ms ease
+  &:hover
+    width: 16rem
+    .link-text
+      display: block
 
 .nav
   list-style: none
@@ -11,3 +16,23 @@
   display: flex
   flex-direction: column
   align-items: center
+  height: 100%
+  &-item
+    @extend .nav
+    width: 100%
+    color: white
+    &:last-child
+      height: auto
+      margin-top: auto
+      margin-bottom: 0.5rem
+  &-link
+    display: flex
+    align-items: center
+    height: 5rem
+    color: var(--text-secondary)
+    text-decoration: none
+
+.link-text
+  display: none
+  margin-left: 1rem
+
