--- a/src/styles.sass
+++ b/src/styles.sass
@@ -12,6 +12,7 @@
   --text-secondary: #00ffe7
   --bg-primary: #23232e
   --bg-secondary: #383884
+  --transition-speed: 200ms
 
 html, body
   height: 100%
