Finished navbar component styling

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<ul class="navbar-nav">
+<ul class="nav">
   <!-- App logo -->
   <li class="logo">
-    <a href="#" class="nav-link">
+    <a href="#" class="nav-link logo-link">
       <i class="material-icons">polymer</i>
-      <span class="link-text logo-text">ITEM MANAGER</span>
+      <span class="link-text logo-text">Item Manager</span>
     </a>
   </li>
 
