--- a/src/app/layout/navbar/navbar.component.sass
+++ b/src/app/layout/navbar/navbar.component.sass
@@ -5,7 +5,7 @@
   background-color: var(--bg-secondary)
   transition: var(--transition-speed) ease
   &:hover
-    width: 16rem
+    width: 20rem
     .link-text
       display: block
 
@@ -13,7 +13,7 @@ i
   min-width: 2rem
   margin: 0 1rem
 
-.navbar-nav
+.nav
   list-style: none
   padding: 0
   margin: 0
@@ -21,39 +21,43 @@ i
   flex-direction: column
   align-items: center
   height: 100%
-
-.nav-item
-  width: 100%
-  &:last-child
-    margin-top: auto
-
-.nav-link
-  display: flex
-  align-items: center
-  height: 5rem
-  color: white
-  text-decoration: none
   &:hover
-    color: var(--text-secondary)
-    transition: var(--transition-speed)
-    background-color: #1e1e47
+    .logo i
+      transform: rotate(-180deg)
+  &-item
+    width: 100%
+    &:last-child
+      margin-top: auto
+  &-link
+    display: flex
+    align-items: center
+    height: 5rem
+    color: white
+    text-decoration: none
+    &:hover
+      color: var(--text-secondary)
+      transition: var(--transition-speed)
+      background-color: #1e1e47
 
 .link-text
   display: none
   margin-left: 1rem
 
 .logo
+  text-transform: uppercase
   font-weight: bolder
   background-color: #1e1e47
-  color: var(--text-secondary)
+  letter-spacing: 0.3ch
   width: 100%
+  font-size: 1.2rem
+  i
+    transform: rotate(0deg)
+    transition: transform var(--transition-speed)
 
-// .nav-link-logo
-//   display: flex
-//   align-items: center
-//   height: 5rem
-//   background-color: #1e1e47
-//   color: var(--text-secondary)
-//   text-decoration: none
-//   &:hover
-//     transition: var(--transition-speed)
+.logo-link
+  background-color: black
+  color: var(--text-secondary)
+  &:hover
+    color: var(--text-secondary)
+    transition: var(--transition-speed)
+    background-color: black
