--- a/src/styles.sass
+++ b/src/styles.sass
@@ -52,3 +52,9 @@ main
   -moz-osx-font-smoothing: grayscale
   // IE
   font-feature-settings: 'liga'
+
+// Responsiveness
+// Small screens
+@media(max-width: 600px)
+  main
+    margin-left: 0
