Added first routes and basic testing

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -2,8 +2,15 @@
   <ul class="nav">
     <!-- App logo -->
     <li class="logo">
-      <a href="#" class="nav-link logo-link">
-        <i class="material-icons">polymer</i>
+      <a class="nav-link logo-link">
+        <i class="material-icons">fingerprint</i>
+        <span class="link-text logo-text">Item Manager</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
+      <a routerLink="/" class="nav-link">
+        <i class="material-icons">calendar_view_day</i>
         <span class="link-text logo-text">Item Manager</span>
       </a>
     </li>
@@ -15,8 +22,8 @@
       </a>
     </li>
 
-    <li class="nav-item" id="themeButton">
-      <a href="#" class="nav-link">
+    <li class="nav-item">
+      <a routerLink="/contact" class="nav-link">
         <i class="material-icons">email</i>
         <span class="link-text logo-text">Contact</span>
       </a>
