First working version fetching item list and showing data

--- a/src/app/layout/navbar/navbar.component.sass
+++ b/src/app/layout/navbar/navbar.component.sass
@@ -1,6 +1,6 @@
 .navbar
   position: fixed
-  background-color: var(--bg-secondary)
+  background-color: var(--bg-navbar)
   transition: var(--transition-speed) ease
   &:hover
     width: 20rem
