--- a/src/app/shared/item/item.component.html
+++ b/src/app/shared/item/item.component.html
@@ -1,1 +1,12 @@
-<p>item works!</p>
+<div class="sections">
+  <div class="photo" style="background-image: url({{ item.image }});">
+    <!-- <img src="{{ item.image }}" class="photo-img" /> -->
+  </div>
+  <div class="info">
+    <div>{{ item.title }}</div>
+    <div class="info-description">{{ item.description }}</div>
+  </div>
+  <div class="price">
+    {{ item.price | currency: "EUR" }}
+  </div>
+</div>
