--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,15 +10,16 @@
   // Variables
   --text-primary: #b6b6b6
   --text-secondary: #00ffe7
-  --bg-primary: #23232e
-  --bg-secondary: #383884
+  --bg-primary: white
+  --bg-secondary: #eceff1
+  --bg-navbar: #383884
   --transition-speed: 200ms
 
 html, body
   height: 100%
   width: 100%
   color: black
-  background-color: white
+  background-color: var(--bg-secondary)
   margin: 0
   padding: 0
   left: 0
