--- a/src/app/shared/item-list/item-list.component.html
+++ b/src/app/shared/item-list/item-list.component.html
@@ -1,1 +1,7 @@
-<p>item-list works!</p>
+<div class="list" *ngIf="items$ | async as items; else error">
+  <item *ngFor="let item of items" [item]="item"></item>
+</div>
+
+<ng-template #error>
+  {{ errorMessage }}
+</ng-template>
