--- a/src/app/shared/item/item.component.html
+++ b/src/app/shared/item/item.component.html
@@ -3,10 +3,16 @@
     <img class="photo-img" src="{{ item.image }}" alt="{{ item.title }}" />
   </div>
   <div class="info">
-    <div class="info-title">{{ item.title }}</div>
+    <div class="info-title">
+      <p>
+        {{ item.title }}
+      </p>
+    </div>
     <!-- TODO: Set locale for correct currency positioning -->
     <div class="info-price">{{ item.price | currency: "EUR" }}</div>
-    <div class="info-description">{{ item.description }}</div>
+    <div class="info-description">
+      <p class="info-description-text">{{ item.description }}</p>
+    </div>
   </div>
   <div class="buttons">
     <div>
