--- a/src/app/shared/item/item.component.html
+++ b/src/app/shared/item/item.component.html
@@ -1,19 +1,22 @@
 <div class="sections">
+  <!-- Photo -->
   <div class="photo">
     <img class="photo-img" src="{{ item.image }}" alt="{{ item.title }}" />
   </div>
+
+  <!-- Info (text) -->
   <div class="info">
-    <div class="info-title">
-      <p>
-        {{ item.title }}
-      </p>
-    </div>
+    <p class="info-title">
+      {{ item.title }}
+    </p>
     <!-- TODO: Set locale for correct currency positioning -->
     <div class="info-price">{{ item.price | currency: "EUR" }}</div>
     <div class="info-description">
       <p class="info-description-text">{{ item.description }}</p>
     </div>
   </div>
+
+  <!-- Buttons -->
   <div class="buttons">
     <div>
       <i class="material-icons buttons-fav" alt="Add to your favorites"
