Added filter bar for item lists

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -8,6 +8,7 @@
       </a>
     </li>
 
+    <!-- Item Manager -->
     <li class="nav-item">
       <a routerLink="/" class="nav-link">
         <i class="material-icons">calendar_view_day</i>
@@ -15,6 +16,7 @@
       </a>
     </li>
 
+    <!-- Favorites -->
     <li class="nav-item">
       <a href="#" class="nav-link">
         <i class="material-icons">favorite</i>
@@ -22,6 +24,7 @@
       </a>
     </li>
 
+    <!-- Contact -->
     <li class="nav-item">
       <a routerLink="/contact" class="nav-link">
         <i class="material-icons">email</i>
