--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,10 +10,13 @@
   // Variables
   --text-primary: #b6b6b6
   --text-secondary: #00ffe7
+
   --bg-primary: white
   --bg-secondary: #eceff1
   --bg-navbar: #383884
+
   --transition-speed: 200ms
+  --border-radius: 7px
 
 html, body
   height: 100%
@@ -56,7 +59,7 @@ main
 
 // Responsiveness
 // Small screens
-@media(max-width: 600px)
+@media(max-width: 800px)
   main
     margin-left: 0
     margin-bottom: 5rem
