Pre component migration commit

--- a/src/app/shared/item-list/item-list.component.html
+++ b/src/app/shared/item-list/item-list.component.html
@@ -1,4 +1,6 @@
-<div class="filters">filters</div>
+<div class="filters">
+  <searcher></searcher>
+</div>
 
 <div class="list" *ngIf="items$ | async as items; else error">
   <item *ngFor="let item of items" [item]="item"></item>
