--- a/src/app/shared/item/item.component.sass
+++ b/src/app/shared/item/item.component.sass
@@ -1,7 +1,6 @@
 \:host
   display: flex
   flex-direction: column
-  justify-content: center
   border: 1px solid var(--bg-secondary)
   color: black
   padding: 0.4rem
@@ -66,18 +65,21 @@ p
   &-fav
     cursor: pointer
     font-size: 2rem
-    background-color: #eceff1
+    background-color: var(--bg-secondary)
     border-radius: 50%
     border: 1x solid grey
     padding: 7px
     -webkit-text-stroke-width: 1px
-    -webkit-text-stroke-color: black
+    -webkit-text-stroke-color: deeppink
+    &:hover
+      background-color: var(--text-secondary)
 
 // Responsiveness
 // Large screens
 @media(min-width: 800px)
   \:host
     height: 200px
+    justify-content: center
 
   .sections
     grid-template-areas: 'photo  info  buttons'
@@ -90,7 +92,7 @@ p
 
   .sections
     grid-template-areas: 'photo' 'info' 'buttons'
-    grid-template-columns: auto auto auto
+    grid-template-columns: 100%
     gap: 0
 
   .info
