--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic)
-@import url(https://fonts.googleapis.com/icon?family=Material+Icons)
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons+Round)
 
 \:root
   font-size: 16px
@@ -37,7 +37,7 @@ main
 
 // Material Icons
 .material-icons
-  font-family: 'Material Icons'
+  font-family: 'Material Icons Round'
   font-weight: normal
   font-style: normal
   font-size: 3rem
