--- a/src/app/pages/item-manager/item/item.component.html
+++ b/src/app/pages/item-manager/item/item.component.html
@@ -21,7 +21,8 @@
         class="material-icons buttons-fav"
         [ngClass]="{ isFavorite: isFavorite }"
         alt="Add to your favorites"
-        >favorite</i
+      >
+        favorite</i
       >
     </div>
   </div>
