--- a/src/app/shared/searcher/searcher.component.html
+++ b/src/app/shared/searcher/searcher.component.html
@@ -1,1 +1,9 @@
-<input />
+<label
+  >Buscar:
+  <input
+    #searchBox
+    id="search-box"
+    (input)="search(searchBox.value)"
+    placeholder="Busca por título, descripción, precio..."
+  />
+</label>
