Moved pipes and services to app folder

--- a/src/app/pages/item-manager/item/item.component.html
+++ b/src/app/pages/item-manager/item/item.component.html
@@ -6,9 +6,11 @@
 
   <!-- Info (text) -->
   <div class="info">
-    <p class="info-title">{{ item.title }} {{ item.id }}</p>
-    <!-- TODO: Set locale for correct currency positioning -->
-    <div class="info-price">{{ item.price | currency: "EUR" }}</div>
+    <p class="info-title">{{ item.title }}</p>
+    <div class="info-price">
+      <!-- TODO: Set locale for correct currency positioning -->
+      {{ item.price | currency: "EUR":"symbol":"1.0-0" }}
+    </div>
     <div class="info-description">
       <p class="info-description-text">{{ item.description }}</p>
     </div>
