--- a/src/app/shared/searcher/searcher.component.sass
+++ b/src/app/shared/searcher/searcher.component.sass
@@ -1,3 +1,13 @@
+\:host
+  display: grid
+  grid-gap: 0
+  grid-template-columns: 35px 320px
+  align-items: center
+
+i
+  font-size: 2rem
+  margin-top: 5px
+
 input
   border: 1px solid black
   height: 30px
