Added email painting and filtering

--- a/src/app/pages/item-manager/item/item.component.html
+++ b/src/app/pages/item-manager/item/item.component.html
@@ -13,6 +13,9 @@
     </div>
     <div class="info-description">
       <p class="info-description-text">{{ item.description }}</p>
+      <div class="info-description-email">
+        <a href="mailto:{{ item.email }}">{{ item.email }}</a>
+      </div>
     </div>
   </div>
 
