Finished sort by filter

--- a/src/app/shared/searcher/searcher.component.html
+++ b/src/app/shared/searcher/searcher.component.html
@@ -4,6 +4,6 @@
 <input
   #searchBox
   id="search-box"
-  (input)="search(searchBox.value)"
+  (input)="onSearch(searchBox.value)"
   placeholder="Busca por título, descripción, precio..."
 />
