--- a/src/app/pages/item-manager/item-list/item-list.component.html
+++ b/src/app/pages/item-manager/item-list/item-list.component.html
@@ -1,5 +1,21 @@
 <div class="filters">
+  <!-- Searcher -->
   <searcher (searched)="onSearched($event)"></searcher>
+
+  <!-- Sort By -->
+  <!-- TODO: Separate SortBy select to a shareable component -->
+  <!-- TODO: Use more beautiful material design select -->
+  <div class="sort-filter">
+    <span>Ordenar por precio, título...</span>
+    <span>
+      <i class="material-icons">sort_by_alpha</i>
+    </span>
+    <select [(ngModel)]="selectedOrder" (ngModelChange)="onSortBy($event)">
+      <option [value]="option" *ngFor="let option of orderByOptions">{{
+        option
+      }}</option>
+    </select>
+  </div>
 </div>
 
 <div class="list" *ngIf="items$ | async as items">
