--- a/src/app/pages/item-manager/item-list/item-list.component.sass
+++ b/src/app/pages/item-manager/item-list/item-list.component.sass
@@ -1,12 +1,33 @@
+i
+  font-size: 2rem
+  margin-top: 5px
+
+select
+  border: 1px solid black
+  height: 30px
+  width: 300px
+  border-radius: var(--border-radius)
+
 .list
   display: grid
   gap: 1rem
 
 .filters
+  display: grid
+  grid-gap: 0
+  grid-template-columns: 500px 700px
+  align-items: center
+
   background-color: var(--bg-primary)
   padding: 10px
   margin-bottom: 10px
   border-radius: var(--border-radius)
+
+.sort-filter
+  display: grid
+  grid-gap: 0
+  grid-template-columns: 200px 35px 320px
+  align-items: center
 
 // Responsiveness
 // Large screens
