--- a/src/app/pages/item-manager/item-list/item-list.component.sass
+++ b/src/app/pages/item-manager/item-list/item-list.component.sass
@@ -15,19 +15,28 @@ select
 .filters
   display: grid
   grid-gap: 0
-  grid-template-columns: 500px 700px
+  grid-template-areas: 'search  sort  pagination'
+  grid-template-columns: 380px auto 200px
   align-items: center
-
   background-color: var(--bg-primary)
   padding: 10px
   margin-bottom: 10px
   border-radius: var(--border-radius)
+  min-width: fit-content
+
+.search
+  grid-area: search
 
 .sort-filter
+  grid-area: sort
   display: grid
   grid-gap: 0
   grid-template-columns: 200px 35px 320px
   align-items: center
+
+.pagination
+  grid-area: pagination
+  text-align: right
 
 // Responsiveness
 // Large screens
