--- a/src/app/pages/item-manager/item-list/item-list.component.sass
+++ b/src/app/pages/item-manager/item-list/item-list.component.sass
@@ -4,19 +4,17 @@ i
 
 select
   border: 1px solid black
-  height: 30px
+  height: 36px
   width: 300px
   border-radius: var(--border-radius)
 
 .list
   display: grid
-  gap: 1rem
 
 .filters
   display: grid
   grid-gap: 0
-  grid-template-areas: 'search  sort  pagination'
-  grid-template-columns: 380px auto 200px
+
   align-items: center
   background-color: var(--bg-primary)
   padding: 10px
@@ -31,21 +29,48 @@ select
   grid-area: sort
   display: grid
   grid-gap: 0
-  grid-template-columns: 200px 35px 320px
   align-items: center
 
 .pagination
   grid-area: pagination
-  text-align: right
 
 // Responsiveness
 // Large screens
 @media(min-width: 800px)
+  .filters
+    grid-template-areas: 'search  sort  pagination'
+    grid-template-columns: 380px auto 500px
+
+  .sort-filter
+    grid-template-columns: 200px 35px 320px
+
+
   .list
+    gap: 1rem
     padding-left: 10vw
     padding-right: 10vw
 
 // Small screens
 @media(max-width: 800px)
+  .filters
+    grid-template-areas: 'search' 'sort' 'pagination'
+    grid-template-columns: auto auto auto
+    justify-content: center
+
+  .search
+    justify-content: center
+    margin-bottom: 20px
+
+  .sort-filter
+    justify-content: center
+    margin-bottom: 20px
+    grid-template-columns: 35px 320px
+    &-description
+      display: none
+
+  .pagination
+    text-align: center
+
   .list
+    gap: 0
     padding: 0
