--- a/src/app/shared/pagination/pagination.component.sass
+++ b/src/app/shared/pagination/pagination.component.sass
@@ -5,6 +5,7 @@
   align-items: center
 
 button
+  border-radius: var(--border-radius)
   transform: scale(0.7)
   border: none
   background-color: var(--bg-secondary)
