Cleaned code for pagination and filters

--- a/src/app/pages/item-manager/filters/filters.component.html
+++ b/src/app/pages/item-manager/filters/filters.component.html
@@ -19,7 +19,7 @@
 <pagination
   class="pagination"
   [lastPage]="lastPage"
-  [firstPage]="1"
+  [firstPage]="firstPage"
   [currentPage]="currentPage"
   (changed)="onPageChange($event)"
 ></pagination>
