--- a/src/app/shared/pagination/pagination.component.sass
+++ b/src/app/shared/pagination/pagination.component.sass
@@ -4,6 +4,9 @@
   justify-content: flex-end
   align-items: center
 
+span
+  text-align: center
+
 button
   border-radius: var(--border-radius)
   transform: scale(0.7)
