Installed angular-material

--- a/src/app/pages/item-manager/filters/filters.component.html
+++ b/src/app/pages/item-manager/filters/filters.component.html
@@ -4,15 +4,18 @@
 <!-- Sort By -->
 <!-- TODO: Use more beautiful material design select -->
 <div class="sort-filter">
-  <span class="sort-filter-description">Ordenar por precio, título...</span>
   <span>
     <i class="material-icons">sort_by_alpha</i>
   </span>
-  <select [(ngModel)]="selectedOrder" (ngModelChange)="onSortBy($event)">
-    <option [value]="option" *ngFor="let option of orderByOptions">{{
-      option
-    }}</option>
-  </select>
+
+  <mat-form-field>
+    <mat-label>Ordenar por precio, título...</mat-label>
+    <mat-select [(ngModel)]="selectedOrder" (ngModelChange)="onSortBy($event)">
+      <mat-option [value]="option" *ngFor="let option of orderByOptions">{{
+        option
+      }}</mat-option>
+    </mat-select>
+  </mat-form-field>
 </div>
 
 <!-- Pagination -->
