--- a/src/app/pages/item-manager/filters/filters.component.sass
+++ b/src/app/pages/item-manager/filters/filters.component.sass
@@ -13,12 +13,6 @@ i
   font-size: 2rem
   margin-top: 5px
 
-select
-  border: 1px solid black
-  height: 36px
-  width: 300px
-  border-radius: var(--border-radius)
-
 .search
   grid-area: search
 
@@ -39,7 +33,7 @@ select
     grid-template-columns: 380px auto auto
 
   .sort-filter
-    grid-template-columns: 200px 35px 320px
+    grid-template-columns: 35px 320px
 
   .list
     gap: 1rem
