--- a/src/styles.sass
+++ b/src/styles.sass
@@ -43,6 +43,9 @@ input:focus
 select:focus
   outline: none
 
+mat-form-field
+  margin-left: 20px
+
 // Responsiveness
 // Small screens
 @media(max-width: 800px)
