Finished favorites modal - only search and pagination missing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<navbar></navbar>
+<!-- Navigation bar -->
+<navbar (favoritesOpened)="onOpenFavorites()"></navbar>
 
+<!-- Main content -->
 <main>
   <router-outlet></router-outlet>
 </main>
