--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -17,8 +17,8 @@
     </li>
 
     <!-- Favorites -->
-    <li class="nav-item">
-      <a href="#" class="nav-link">
+    <li class="nav-item" (click)="onOpenFavorites()">
+      <a class="nav-link favorites">
         <i class="material-icons">favorite</i>
         <span class="link-text logo-text">Favorites</span>
       </a>
