--- a/src/app/layout/navbar/navbar.component.sass
+++ b/src/app/layout/navbar/navbar.component.sass
@@ -60,6 +60,9 @@ i
     transition: var(--transition-speed)
     background-color: black
 
+.favorites
+  cursor: pointer
+
 // Responsiveness
 // Large screens
 @media(min-width: 800px)
