--- a/src/app/pages/item-manager/filters/filters.component.sass
+++ b/src/app/pages/item-manager/filters/filters.component.sass
@@ -45,16 +45,16 @@ i
   \:host
     grid-template-areas: 'search' 'sort' 'pagination'
     grid-template-columns: auto auto auto
-    justify-content: center
+    padding: 0
 
   .search
+    grid-template-columns: 20px 300px
     justify-content: center
-    margin-bottom: 20px
 
   .sort-filter
+    grid-template-columns: 20px 300px
     justify-content: center
     margin-bottom: 20px
-    grid-template-columns: 35px 320px
     &-description
       display: none
 
